# connectome

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  read.me  requirements.txt  setup.py  sitemap.xml
.github/workflows/: dependencies.yml  docs.yml  release.yml  tests.yml
connectome/: __init__.py  blocks.py  cache.py  edges.py  engine.py  exceptions.py  factory.py  interface.py  layer.py  layers.py  old_blocks.py  old_engine.py  old_interface.py  serializers.py  storage.py  utils.py
connectome/cache/: __init__.py  base.py  compat.py  disk.py  locks.py  memory.py  pickler.py  remote.py  transactions.py
connectome/containers/: __init__.py  base.py  cache.py  context.py  debug.py  filter.py  goup.py  group.py  join.py  merge.py  pipeline.py  reversible.py  shortcuts.py  transform.py
connectome/engine/: __init__.py  base.py  compiler.py  compilers.py  edges.py  execution.py  executor.py  graph.py  interface.py  node_hash.py  utils.py  vm.py
connectome/interface/: __init__.py  base.py  blocks.py  compat.py  complex_edges.py  decorators.py  edges.py  external.py  factory.py  factory_utils.py  metaclasses.py  nodes.py  prepared.py  split.py  utils.py
connectome/layers/: __init__.py  apply.py  base.py  cache.py  chain.py  check_ids.py  columns.py  debug.py  dynamic.py  filter.py  goup.py  group.py  join.py  merge.py  pipeline.py  reversible.py  shortcuts.py  source.py  split.py  transform.py  utils.py
connectome/storage/: __init__.py  base.py  cache.py  config.py  digest.py  disk.py  interface.py  local.py  locker.py  pickler.py  relative_remote.py  remote.py  ssh.py  storage.py  utils.py
docs/: index.md  layers.md  requirements.txt
docs/source/: conf.py  connectome.blocks.rst  index.rst
docs/tutorials/: 00 - Intro.md  01 - Source.ipynb  02 - Transforms.ipynb  03 - Data Augmentation.ipynb  04 - Caching.ipynb  05 - Invertible Transforms.ipynb  06 - Summary.md  layers02.py
layers/: index.html
scripts/: check-reqs-consistency.py
tests/: cache_fixtures.py  conftest.py  disk_fixtures.py  graph_fixtures.py  hash_fixtures.py  interface_fixtures.py  pytest.ini  test_cache.py  test_chain.py  test_container.py  test_external.py  test_filter.py  test_graph.py  test_interface.py  test_merge.py  test_serializers.py  test_utils.py  utils.py
tests/assets/: id_ed25519  id_ed25519.pub  ssh_config
tests/cache/: test_cache.py  test_disk_cache.py  test_hash.py  test_pickler.py
tests/engine/: test_graph.py
tests/interface/: test_chain.py  test_factory.py  test_filter.py  test_group.py  test_interface.py  test_inverse.py  test_merge.py  test_metaclasses.py  test_mixins.py  test_prepared.py
tests/pickler_test_helpers/: __init__.py  classes.py  functions.py  functions2.py
tests/storage/: test_storage.py
tests/test_cache/: test_cache.py  test_disk_cache.py  test_hash.py  test_layer.py  test_pickler.py
tests/test_containers/: test_validity.py
tests/test_engine/: test_graph.py  test_node_hash.py
tests/test_interface/: test_chain.py  test_factory.py  test_filter.py  test_interface.py  test_inverse.py  test_join.py  test_merge.py  test_metaclasses.py  test_mixins.py  test_prepared.py  test_validation.py
tests/test_layers/: test_base.py  test_chain.py  test_check_ids.py  test_filter.py  test_group.py  (+3 more)
(+13 files in other folders)
