[project]
name = "connectome"
dynamic = ["version"]
description = "A library for datasets containing heterogeneous data"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["dag", "dataset", "cache", "consistency"]
authors = [
    { name = "NeuroML Group", email = "maxs987@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy",
    "tqdm",
    "pylru",
    "tarn>=0.1.0,<1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/neuro-ml/connectome"
"Issues" = "https://github.com/neuro-ml/connectome/issues"
"Source" = "https://github.com/neuro-ml/connectome"
"Docs" = "https://neuro-ml.github.io/connectome"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["connectome"]

[tool.setuptools.dynamic]
version = { attr = "connectome.__version__.__version__" }
