[project]
name = "connectome"
dynamic = ["version"]
description = "A library for datasets containing heterogeneous data"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["dag", "dataset", "cache", "consistency"]
authors = [
    { name = "NeuroML Group", email = "maxs987@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy",
    "tqdm",
    "pylru",
    "tarn>=0.1.0,<1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/neuro-ml/connectome"
"Issues" = "https://github.com/neuro-ml/connectome/issues"
"Source" = "https://github.com/neuro-ml/connectome"
"Docs" = "https://neuro-ml.github.io/connectome"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["connectome"]

[tool.setuptools.dynamic]
version = { attr = "connectome.__version__.__version__" }

[tool.flake8]
# W503: line break before binary operator is actually considered best-practice
# E203: spaces around complex variables in slices are pep-right
# F401: unused imports in __init__.py-s
# I251: allow absolute imports in upper files
# B028: !r is not supported for python<3.8
ignore = ["W503", "E203", "B028"]
per-file-ignores = [
    "**/__init__.py:F401",
    "tests/*:I251",
]
max-line-length = 120
banned-modules = "connectome.* = Use relative imports"
